--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,10 +18,10 @@
 			<h1 class="title">Welcome - To join the chat group enter your
 				name</h1>
 			<form id="welcomeForm" name="welcomeForm">
-				<div class="form-group">
+				<!--<div class="form-group">
 					<input type="text" id="name" placeholder="name"
 						class="form-control" />
-				</div>
+				</div>-->
 				<div class="form-group">
 					<button type="submit" onclass="accent username-submit">Lets
 						Begin</button>
